--- a/static/css/app.css
+++ b/static/css/app.css
@@ -2432,7 +2432,7 @@ body {
   -webkit-user-select: none;
   -moz-user-select: none;
   user-select: none;
-  overflow: hidden;
+  overflow: auto;
   --tw-bg-opacity: 1;
   background-color: rgb(120 207 255 / var(--tw-bg-opacity));
   font-family: Noto Sans SC, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
